Fix case sensitivity in redirect URLs

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=home.HTML">
+    <meta http-equiv="refresh" content="0; url=home.html">
     <script>
         // Extra safety: JS redirect if meta-refresh is blocked
-        window.location.href = "home.HTML";
+        window.location.href = "home.html";
     </script>
 </head>
 <body>
