--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
       <div class="tool-card"><div class="tool-icon">🎨</div><h3>Cloudora Canvas</h3><p>Design graphics and posters.</p></div>
       <div class="tool-card"><div class="tool-icon">📁</div><h3>Cloudora Drive</h3><p>Secure cloud storage.</p></div>
       <div class="tool-card"><div class="tool-icon">🧪</div><h3>Cloudora Labs</h3><p>Test experimental features.</p></div>
-      <div class="tool-card"><div class="tool-icon">💬</div><h3>Cloudora Chat</h3><p>Real‑time communication (soon).</p></div>
+      <div class="tool-card"><div class="tool-icon">💬</div><h3>Cloudora AMS</h3><p>Advance accounting system.</p></div>
     </div>
   </section>
 
