--- a/home.html
+++ b/home.html
@@ -105,7 +105,7 @@
 
   <section class="hero" id="hero">
     <h1>Work. Create. Explore.</h1>
-    <p>The all‑in‑one ecosystem for students, creators, developers, and dreamers.</p>
+    <p>The all-in-one ecosystem for students, creators, developers, and dreamers.</p>
     <a class="btn-secondary" href="#tools">Explore Cloudora Tools</a>
   </section>
 
@@ -117,14 +117,23 @@
       <div class="tool-card"><div class="tool-icon">🎨</div><h3>Cloudora Canvas</h3><p>Design graphics and posters.</p></div>
       <div class="tool-card"><div class="tool-icon">📁</div><h3>Cloudora Drive</h3><p>Secure cloud storage.</p></div>
       <div class="tool-card"><div class="tool-icon">🧪</div><h3>Cloudora Labs</h3><p>Test experimental features.</p></div>
-      <div class="tool-card"><div class="tool-icon">💬</div><h3>Cloudora AMS</h3><p>Advance accounting system.</p></div>
+
+      <!-- CLOUDORA AMS — CLICKABLE TEXT ADDED BELOW -->
+      <div class="tool-card">
+        <div class="tool-icon">💬</div>
+        <h3>Cloudora AMS</h3>
+        <p>Advance accounting system.</p>
+        <p><a href="https://your-link-here.com" style="color:#4285F4; font-weight:600;">Open AMS</a></p>
+      </div>
+      <!-- END OF AMS CARD -->
+      
     </div>
   </section>
 
   <section class="features-section">
     <h2 class="section-title">Why Cloudora?</h2>
     <div class="features-grid">
-      <div class="feature"><h3>Beginner‑Friendly</h3><p>Simple UI for anyone to use.</p></div>
+      <div class="feature"><h3>Beginner-Friendly</h3><p>Simple UI for anyone to use.</p></div>
       <div class="feature"><h3>Fast & Smooth</h3><p>Designed for all devices.</p></div>
       <div class="feature"><h3>Beautifully Organized</h3><p>Everything in one clean place.</p></div>
       <div class="feature"><h3>Privacy First</h3><p>Your work stays yours.</p></div>
